# Biblioteca216BackendSync

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
BackendSync/: __init__.py
BackendSync/routes/: api.py
BackendSync/utils/: supabase_connector.py
