[tool.poetry]
name = "biblioteca-sync"
version = "0.1.0"
description = ""
authors = ["David <dadch1404@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
requests = "^2.31.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
